# adxl366_spi_nordic_sdk

./: .gitignore  README.md  pyproject.toml  setup.sh  teardown.sh
application/: CMakeLists.txt  prj.conf  west.yml
application/boards/: xiao_nrf54l15_nrf54l15_cpuapp.overlay
application/src/: main.c
tools/: ble_fft.py  ble_plot.py  pyproject.toml
